aggregate is_assignment_type
returns true if selection or essay assignment

--- a/media/templates/homepage.mustache
+++ b/media/templates/homepage.mustache
@@ -266,11 +266,11 @@
                                             <span class="metadata-value">{{modified_date}} at {{modified_time}}</span>
                                         </div>
 
-                                        {{#is_assignment}}
+                                        {{#is_assignment_type}}
                                         <div class="metadata">
                                             <span class="metadata-value metadata-value-status">{{{responses}}} responses</span>
                                         </div>
-                                        {{/is_assignment}}
+                                        {{/is_assignment_type}}
 
                                         <div class="metadata">
                                             <span class="metadata-value metadata-value-status">{{{status}}}</span>
