Juxtaposition Assignment - first steps * setup juxtaposition assignment type * correct juxtaposition spelling 17 billion times. (#$%^) * refactor SelectionAssignmentEditView & SelectionAssignmentView functionality into generic views * add Juxtaposition views & url routing

--- a/media/css/mediathread.css
+++ b/media/css/mediathread.css
@@ -311,7 +311,8 @@ ul#projects li {
 }
 
 #create-project-menu a {
-    margin-left: 6px;
+    margin: 0 0 10px 6px;
+    display: block;
 }
 
 #create-project-menu .divideLinks {
