refactor selection assignment create/edit wizard into generic assignment create/edit wizard

--- a/mediathread/templates/projects/selection_assignment_edit.html
+++ b/mediathread/templates/projects/selection_assignment_edit.html
@@ -76,7 +76,7 @@
                         </a>
                         {% endif %}
                     </h2>
-                    <div data-page="1" class="page">
+                    <div data-page="1" data-page-content="instructions" class="page">
 
                         <p>A selection assignment allows students to make
                         annotations on a video, image, or audio file that
@@ -101,7 +101,7 @@
                         <a href="#" class="btn btn-primary next right">Get Started</a>
                         </div>
                     </div>
-                    <div data-page="2" class="page hidden">
+                    <div data-page="2" data-page-content="choose-item" class="page hidden">
                         <h3>1. Choose an item from the course collection</h3>
                         <div class="selected-item">
                         <center>
@@ -139,7 +139,7 @@
                             <li><a href="#" class="right next">Next</a></li>
                         </ul>
                     </div>
-                    <div data-page="3" class="hidden page">
+                    <div data-page="3" data-page-content="title" class="hidden page">
                         <h3>2. Write title &amp; instructions</h3>
                         <div class="form-group">
                             <label>Assignment Title</label>
@@ -169,7 +169,7 @@
                             </ul>
                         </nav>
                     </div>
-                    <div data-page="4" class="hidden page">
+                    <div data-page="4" data-page-content="due-date" class="hidden page">
                         <h3>3. Set response due date &amp; visibility</h3>
                         <p></p>
                         <div class="form-group">
@@ -190,7 +190,7 @@
                             <li><a href="#" class="right next">Next</a></li>
                         </ul>
                     </div>
-                    <div data-page="5" class="hidden page">
+                    <div data-page="5" data-page-content="publish" class="hidden page">
                         <h3>4. Publish assignment to students</h3>
                         <p></p>
                         <div class="form-group">
