--- a/mediathread/templates/projects/selection_assignment_edit.html
+++ b/mediathread/templates/projects/selection_assignment_edit.html
@@ -23,6 +23,7 @@
     {% include "djangosherd/annotator_resources.html" %}
 
     <script src="{{STATIC_URL}}jquery/js/jquery-ui-timepicker-addon.js" type="text/javascript"></script>
+    <script src="{{STATIC_URL}}js/app/projects/assignment_edit.js" type="text/javascript"></script>
     <script src="{{STATIC_URL}}js/app/projects/selection_assignment_edit.js" type="text/javascript"></script>
 {% endblock %}
 
