Juxtaposition Assignment Create/Edit Wizard
Using the generic AssignmentEditView to create a basic flow: requiring title, instructions, due date, visibility and publish options.

--- a/media/css/mediathread.css
+++ b/media/css/mediathread.css
@@ -4186,7 +4186,8 @@ a.btn.btn-default img.left {
 }
 
 .project-response-form ul,
-.selection-assignment .page ul {
+.selection-assignment .page ul,
+.juxtaposition-assignment .page ul {
     margin:  .4em 0em 0.7em 2em;
 }
 
@@ -4195,6 +4196,8 @@ a.btn.btn-default img.left {
     display: none !important;
 }
 
+.juxtaposition-assignment #id_response_view_policy,
+.juxtaposition-assignment #id_publish,
 .selection-assignment #id_response_view_policy,
 .selection-assignment #id_publish {
     margin: 0 4em 0.7em .7em;
@@ -4202,6 +4205,8 @@ a.btn.btn-default img.left {
     width: 100%;
 }
 
+.juxtaposition-assignment #id_response_view_policy label,
+.juxtaposition-assignment #id_publish label,
 .selection-assignment #id_response_view_policy label,
 .selection-assignment #id_publish label {
     font-weight: normal;
@@ -4211,7 +4216,6 @@ a.btn.btn-default img.left {
     padding-left: 15px !important;
     width: 32% !important;
 }
-
 
 .selection-assignment .asset-view-published {
     border: 0;
