--- a/mediathread/templates/projects/juxtaposition_assignment_edit.html
+++ b/mediathread/templates/projects/juxtaposition_assignment_edit.html
@@ -16,10 +16,12 @@
 
 {% block js %}
     <script src="{{STATIC_URL}}jquery/js/jquery-ui-timepicker-addon.js" type="text/javascript"></script>
-    <script src="{{STATIC_URL}}js/app/projects/juxtaposition_assignment_edit.js" type="text/javascript"></script>
+    <script src="{{STATIC_URL}}js/app/projects/assignment_edit.js" type="text/javascript"></script>
 {% endblock %}
 
 {% block uncompressable_js %}
+    {% include "djangosherd/player_resources.html" %}
+
     <!-- required project functionality -->
     <script type="text/javascript" src="{{STATIC_URL}}js/select2/select2.min.js"></script>
     <script type="text/javascript" src="{{STATIC_URL}}js/lib/sherdjs/lib/tinymce/tinymce.min.js"></script>
@@ -27,7 +29,7 @@
 
     <script type="text/javascript">
         jQuery(document).ready(function () {
-            var view = new JuxtapositionAssignmentEditView({
+            var view = new AssignmentEditView({
                 el: jQuery('.juxtaposition-assignment').first()
             });
         });
@@ -59,17 +61,15 @@
                         </a>
                         {% endif %}
                     </h2>
-                    <div data-page="1" class="page">
+                    <div data-page="1" data-page-content="instructions" class="page">
 
-                        <p>A juxtaposition assignment allows students to compare
-                        and contrast a single spine video to a series of video,
-                        image or audio selections.</p>
+                        <p>A juxtaposition assignment allows students to compare and contrast a single spine video to a series of video, image or audio selections.</p>
 
                         <p>Instructions to students could include:</p>
                         <ul>
-                        <li><i>tbd</i></li>
-                        <li><i>tbd</i></li>
-                        <li><i>tbd</i></li>
+                        <li>tbd</li>
+                        <li>tbd</li>
+                        <li>tbd</li>
                         </ul>
 
                         <p>Visibility of student responses must be set at one of the following levels:</p>
@@ -83,8 +83,8 @@
                         <a href="#" class="btn btn-primary next right">Get Started</a>
                         </div>
                     </div>
-                    <div data-page="2" class="hidden page">
-                        <h3>1. Write title &amp; instructions</h3>
+                    <div data-page="2" data-page-content="title" class="hidden page">
+                        <h3>2. Write title &amp; instructions</h3>
                         <div class="form-group">
                             <label>Assignment Title</label>
                             <input type="text" name="title" class="form-control"
@@ -96,9 +96,10 @@
                             <label>Assignment Instructions</label>
                             <div>Instructions to students could include:</div>
                             <ul>
-                                <li><i>tbd</i></li>
-                                <li><i>tbd</i></li>
-                                <li><i>tbd</i></li>
+                                <li>How many selections to create</li>
+                                <li>How to title selections</li>
+                                <li>How to annotate selections in the notes field</li>
+                                <li>Guidance on tagging selections with free form tags or course vocabulary terms</li>
                             </ul>
                             <textarea name="body" class="form-control mceEditor" id="assignment-instructions">
                                 {{form.instance.body}}
@@ -112,7 +113,7 @@
                             </ul>
                         </nav>
                     </div>
-                    <div data-page="3" class="hidden page">
+                    <div data-page="3" data-page-content="due-date" class="hidden page">
                         <h3>3. Set response due date &amp; visibility</h3>
                         <p></p>
                         <div class="form-group">
@@ -133,7 +134,7 @@
                             <li><a href="#" class="right next">Next</a></li>
                         </ul>
                     </div>
-                    <div data-page="4" class="hidden page">
+                    <div data-page="4" data-page-content="publish" class="hidden page">
                         <h3>4. Publish assignment to students</h3>
                         <p></p>
                         <div class="form-group">
