--- a/mediathread/templates/projects/selection_assignment_view.html
+++ b/mediathread/templates/projects/selection_assignment_view.html
@@ -25,6 +25,7 @@
     {% include "djangosherd/annotator_resources.html" %}
 
     <script src="{{STATIC_URL}}jquery/js/jquery-ui-timepicker-addon.js" type="text/javascript"></script>
+    <script src="{{STATIC_URL}}js/app/projects/assignment_view.js" type="text/javascript"></script>
     <script src="{{STATIC_URL}}js/app/projects/selection_assignment_view.js" type="text/javascript"></script>
 {% endblock %}
 
