--- a/mediathread/templates/courseaffils/course_update_form.html
+++ b/mediathread/templates/courseaffils/course_update_form.html
@@ -31,6 +31,16 @@
                 default.
             </span>
         </div>
+        {% if user.is_staff%}
+        <div class="well">
+            <h3>Item Download</h3>
+            {% bootstrap_field form.allow_item_download %}
+            <span class="help-block">
+                Allow instructors to see a download link on the Item View page.
+                This option is off by default.
+            </span>
+        </div>
+        {% endif %}
         <div class="well">
             <h3>LTI</h3>
             {% bootstrap_field form.lti_integration %}
