--- a/mediathread/templates/taxonomy/taxonomy.html
+++ b/mediathread/templates/taxonomy/taxonomy.html
@@ -50,7 +50,7 @@
                         <div class="vocabulary-display">
                             <a href="#new-vocabulary" class="icon-link create-vocabulary-open">
                                 Create Concept
-                                <img src="{{STATIC_URL}}img/icons/meth_addselection.png" alt="Create vocabulary" />
+                                <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
                             </a>
                         </div>
                         <div class="vocabulary-create" style="display: none">
