--- a/media/css/mediathread.css
+++ b/media/css/mediathread.css
@@ -590,6 +590,7 @@ ul#standardnav {
     padding: 10px 10px 10px 10px;
     z-index: 9998;
     position: absolute;
+    right: 2px;
     margin-top: 5px;    
     border: 1px solid #CCC;
     -webkit-border-radius: 4px;
