--- a/media/templates/collectionwidget.mustache
+++ b/media/templates/collectionwidget.mustache
@@ -1,4 +1,12 @@
-<div class="collection_table">
+<div class="collection_table collection-widget">
+    <div class="ajaxloader">
+        <div class="message">
+        <img alt="Loading..." src="{{#staticUrl}}{{/staticUrl}}img/ajax-loader.gif">
+        <br /><br />
+        <div>Refreshing the collection</div>
+        </div>
+    </div>
+
     <div class="media-column" >
         <div class="filter-widget" style="display: none">
             <div class="collection-col-3">
