Juxtaposition -> Sequence in user-facing descriptions

--- a/mediathread/templates/projects/juxtaposition_assignment_edit.html
+++ b/mediathread/templates/projects/juxtaposition_assignment_edit.html
@@ -54,7 +54,7 @@
                     <input type="hidden" name="project_type" value="juxtaposition-assignment" />
 
                     <h2>
-                        Edit Juxtaposition Assignment
+                        Edit Sequence Assignment
                         {% if form.instance.id %}
                         <a class="right" href="{% url 'project-workspace' form.instance.id %}">
                             <img alt="Edit" src="{{STATIC_URL}}img/icons/meth_view.png"></span>
@@ -63,7 +63,7 @@
                     </h2>
                     <div data-page="1" data-page-content="instructions" class="page">
 
-                        <p>A juxtaposition assignment allows students to compare and contrast a single spine video to a series of video, image or audio selections.</p>
+                        <p>A sequence assignment allows students to compare and contrast a single spine video to a series of video, image or audio selections.</p>
 
                         <p>Instructions to students could include:</p>
                         <ul>
