--- a/mediathread/templates/projects/juxtaposition_assignment_view.html
+++ b/mediathread/templates/projects/juxtaposition_assignment_view.html
@@ -60,7 +60,7 @@
     <div class="row">
         <div class="col-md-3 column-container">
             <h2 class="">
-                Juxtaposition Assignment
+                Sequence Assignment
                 {% if assignment_can_edit %}
                     <a class="right" href="{% url 'juxtaposition-assignment-edit' assignment.id %}">
                         <img alt="Edit" src="{{STATIC_URL}}img/icons/meth_edit.png"></span>
