--- a/media/templates/collectionwidget.mustache
+++ b/media/templates/collectionwidget.mustache
@@ -6,7 +6,11 @@
         <div>Refreshing the collection</div>
         </div>
     </div>
-
+    <div class="pull-right">
+        <button name="close-modal">
+            <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+        </button>
+    </div>
     <div class="media-column" >
         <div class="filter-widget" style="display: none">
             <div class="collection-col-3">
