--- a/mediathread/templates/base.html
+++ b/mediathread/templates/base.html
@@ -1,4 +1,4 @@
-{% load cache user_projects coursetags compress static bootstrap3 %}
+{% load cache user_projects coursetags compress static bootstrap3 waffle_tags %}
 
 <!DOCTYPE html>
 <html lang="en">
@@ -199,6 +199,24 @@
         </div><!-- id="footer" -->
     {% endblock %}
 
+    {% flag "collection-widget" %}
+    <!-- Collection Modal -->
+    <div id="collection-modal" class="modal fade" tabindex="-1" role="dialog">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                    <h4 class="modal-title">Collection</h4>
+                </div>
+                <div class="modal-body">
+                    <div class="quick-edit" style="display: none"></div>
+                    <div class="collection-view"></div>
+                </div>
+            </div><!-- /.modal-content -->
+        </div><!-- /.modal-dialog -->
+    </div><!-- /.modal -->
+    {% endflag %}
+
     <script type="text/javascript">
         var STATIC_URL = '{{STATIC_URL}}';
 
@@ -213,6 +231,11 @@
                 this.current_user = {{request.user.id}};
                 this.current_username = "{{request.user.username}}";
                 this.user_full_name = "{%public_name for request.user %}";
+                this.flags = [
+                    {% flag "collection-widget" %}
+                        'collection-widget'
+                    {% endflag %}
+                ]
             {% endif %}
         })();
     </script>
@@ -231,6 +254,7 @@
         <script type="text/javascript" src='{% static "js/app/assetmgr/asset.js" %}'></script>
         <script type="text/javascript" src='{% static "js/app/assetmgr/assetpanel.js" %}'></script>
         <script type="text/javascript" src='{% static "js/app/assetmgr/collection.js" %}'></script>
+        <script type="text/javascript" src='{% static "js/app/assetmgr/collectionwidget.js" %}'></script>
 
         <!--  Discussion related -->
         <script type="text/javascript" src='{% static "js/app/discussion/discussionpanel.js" %}'></script>
@@ -241,6 +265,10 @@
 
         <script type="text/javascript">
             jQuery(document).ready(function() {
+                if (typeof djangosherd !== 'undefined') {
+                    MediaThread.collection = new CollectionWidget();
+                }
+
                 // setup some ajax progress indicator
                 jQuery("html").ajaxStart(function() {
                    jQuery(this).addClass("busy");
